Developer/src/objects/FriendRequest__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalFlg__c</fullName>
        <label>承認状況</label>
        <picklist>
            <picklistValues>
                <fullName>承認</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>拒否</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RelatedUserInformation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>被申請者</label>
        <referenceTo>UserInformation__c</referenceTo>
        <relationshipLabel>フレンドリクエスト</relationshipLabel>
        <relationshipName>RelatedUserInformation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestedTime__c</fullName>
        <label>申請時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RequestedUserImage__c</fullName>
        <formula>RelatedUserInformation__r.ImageUrl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>被申請者(写真)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedUserLookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>被申請者(User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RequestedUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequesterAge__c</fullName>
        <formula>RequestingUserInformation__r.Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申請者の年齢</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequesterJob__c</fullName>
        <formula>TEXT(RequestingUserInformation__r.JobStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申請者の職業</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterName__c</fullName>
        <formula>RequestingUser__r.LastName &amp; &quot; &quot; &amp; RequestingUser__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申請者の名前</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequesterPictureURL__c</fullName>
        <formula>RequestingUserInformation__r.PictureURL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申請者の写真URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestingImageUser__c</fullName>
        <formula>RequestingUserInformation__r.ImageUrl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>申請者（写真）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestingUserInformation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>申請者</label>
        <referenceTo>UserInformation__c</referenceTo>
        <relationshipLabel>フレンドリクエスト (申請者)</relationshipLabel>
        <relationshipName>RequestingUserInformation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestingUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>申請者(User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RequestingUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>フレンドリクエスト</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>フレンドリクエスト名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>